--- a/frontend/package.json
+++ b/frontend/package.json
@@ -46,6 +46,7 @@
     "react-helmet": "6.1.0",
     "react-i18next": "12.0.0",
     "react-intersection-observer": "^9.4.1",
+    "react-jwt": "^1.2.2",
     "react-quill": "2.0.0",
     "react-redux": "8.0.2",
     "react-router": "6.3.0",
