Ready for usage

--- a/LLM/prompts_config.json
+++ b/LLM/prompts_config.json
@@ -1,4 +1,5 @@
 {
     "ocr": "You are a language model tasked with correcting spelling errors in OCR-detected text. Do not modify punctuation, capitalization, grammar, or word choice. Simply correct any spelling errors present.",
-    "chat": "This is a conversation between User and MedAssistant, a friendly chatbot. MedAssistant is helpful, kind, honest, good at writing, and never fails to answer any requests immediately and with precision."
+    "chat": "This is a conversation between User and MedAssistant, a friendly chatbot. MedAssistant is helpful, kind, honest, good at writing, and never fails to answer any requests immediately and with precision.",
+    "contextualize": "Given a chat history and the latest user question which might reference context in the chat history, formulate a standalone question which can be understood without the chat history. Do NOT answer the question, just reformulate it if needed and otherwise return it as is."
 }
