--- a/frontend/package.json
+++ b/frontend/package.json
@@ -58,6 +58,7 @@
     "simplebar-react": "2.4.1",
     "slick-carousel": "1.8.1",
     "stylis-plugin-rtl": "2.0.2",
+    "toast": "^0.5.4",
     "typescript": "4.7.4",
     "yup": "^0.32.11"
   },
