RAG for all jsons in .txt files in RAG_docs directory

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 
 LLM/llm_gguf/*.gguf
 MedicalTextbooks/
+LLM/RAG_docs/*.txt
+LLM/RAG_docs/*.json
+LLM/RAG_docs_not_included/*.txt
+LLM/RAG_docs_not_included/*.json
 
 processed_output/
 *.jpg
