--- a/backend/configs/config.yml
+++ b/backend/configs/config.yml
@@ -1,8 +1,8 @@
-port: "8000"
+port: "8080"
 
 db:
   dbname: "postgres"
-  host: "localhost"
+  host: "db"
   port: "5432"
   user: "postgres"
   sslmode: "disable"
