--- a/frontend/package.json
+++ b/frontend/package.json
@@ -44,6 +44,7 @@
     "react-big-calendar": "1.5.0",
     "react-dom": "^18.2.0",
     "react-helmet": "6.1.0",
+    "react-hot-toast": "^2.4.1",
     "react-i18next": "12.0.0",
     "react-intersection-observer": "^9.4.1",
     "react-jwt": "^1.2.2",
@@ -53,6 +54,7 @@
     "react-router-dom": "6.3.0",
     "react-slick": "0.29.0",
     "react-spring": "^9.5.5",
+    "react-toastify": "^10.0.6",
     "redux": "^4.2.1",
     "simplebar": "^6.2.5",
     "simplebar-react": "2.4.1",
@@ -60,6 +62,7 @@
     "stylis-plugin-rtl": "2.0.2",
     "toast": "^0.5.4",
     "typescript": "4.7.4",
+    "typescript-toastify": "^1.0.4",
     "yup": "^0.32.11"
   },
   "devDependencies": {
