--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,8 +13,8 @@
     "@casl/ability": "^6.3.3",
     "@casl/react": "^3.1.0",
     "@emotion/cache": "^11.11.0",
-    "@emotion/react": "11.10.0",
-    "@emotion/styled": "11.10.0",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "5.8.4",
     "@mui/lab": "5.0.0-alpha.110",
     "@mui/material": "5.10.16",
@@ -39,6 +39,7 @@
     "llamaai": "^1.0.4",
     "lodash": "4.17.21",
     "moment": "^2.29.4",
+    "mui-file-input": "^6.0.0",
     "react": "^18.2.0",
     "react-apexcharts": "1.4.0",
     "react-big-calendar": "1.5.0",
