--- a/frontend/package.json
+++ b/frontend/package.json
@@ -49,6 +49,7 @@
     "react-i18next": "12.0.0",
     "react-intersection-observer": "^9.4.1",
     "react-jwt": "^1.2.2",
+    "react-markdown": "^9.0.1",
     "react-quill": "2.0.0",
     "react-redux": "8.0.2",
     "react-router": "6.3.0",
