--- a/.gitignore
+++ b/.gitignore
@@ -174,3 +174,12 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 .idea/
+/test2.jpg
+/test2.png
+/test3.jpg
+/test4.jpg
+/test5.jpg
+/test6.jpg
+/test7.jpg
+/test8.jpg
+/processed_output/
