--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -4,8 +4,8 @@ RUN apt -y upgrade
 
 RUN apt install -y software-properties-common
 RUN add-apt-repository ppa:deadsnakes/ppa
-RUN apt update
 RUN apt -y upgrade
+RUN apt update && apt-get install ffmpeg libsm6 libxext6  -y
 
 RUN apt install -y python3.9
 RUN apt install -y pip
@@ -23,10 +23,22 @@ ADD requirements.txt /app/
 
 WORKDIR /app
 
+
+RUN apt install wget
+
+RUN wget https://github.com/JaidedAI/EasyOCR/releases/download/v1.6.1/cyrillic_g2.zip
+RUN wget https://github.com/JaidedAI/EasyOCR/releases/download/pre-v1.1.6/craft_mlt_25k.zip
+RUN mkdir ~/.EasyOCR
+RUN mkdir ~/.EasyOCR/model
+
+RUN apt install unzip
+
+RUN unzip cyrillic_g2.zip -d ~/.EasyOCR/model
+RUN unzip craft_mlt_25k.zip -d ~/.EasyOCR/model
+
 RUN apt install -y python3.9-venv
 RUN python3.9 -m venv venv
 RUN . /app/venv/bin/activate
-RUN /app/venv/bin/pip install opencv-python
 RUN /app/venv/bin/pip install -r requirements.txt 
 RUN ["/bin/bash", "-c", "source venv/bin/activate"]
 ENV PATH="/app/venv/bin:$PATH"
