--- a/backend/configs/config.yml
+++ b/backend/configs/config.yml
@@ -2,8 +2,8 @@ port: "8080"
 
 db:
   dbname: "postgres"
-#  host: "db"
-  host: "localhost"
+  host: "db"
+#  host: "localhost"
   port: "5432"
   user: "postgres"
   sslmode: "disable"
